--- a/style.css
+++ b/style.css
@@ -41,8 +41,12 @@ header, footer{
     box-sizing: border-box;
 }
 header .logo{
+    width: 67px;
+    height: 50px;
+    background: url('img/Symbol/4.gif');
+    background-repeat: no-repeat;
+    background-size: contain;
     float:left;
-    background: url('img/');
 }
 .logo, .search, .basket, .authorization, .imgStar, .layoutDescription h1, .addCart {
     display: inline-block;
@@ -120,7 +124,7 @@ header .basket-img, .authorization-img{
 }
 .tab-content-layout, .productLayout{
     width: 90%;
-    margin: 0 auto;
+    margin: 2% auto;
 }
 .tab-content .layoutCategories, .Categories{
     box-sizing: border-box;
@@ -351,7 +355,17 @@ menu .menucooling-img {
     text-align: center;
     width: 100%;
     min-width: 200px;
-
+}
+.slider-img .bigImgPositioner:target{
+    position: absolute;
+    top:0;
+    right:0;
+    bottom: 0;
+    left: 0;
+    background: url(img/CPU/Intel/Intel%20Celeron%20G1620%20OEM.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    
 }
 .slider-img .bigImgPositioner img {
     vertical-align: middle;
@@ -960,3 +974,5 @@ menu, .itemsContent {
     display:block;
     pointer-events: auto;
 }
+
+
