--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header{
     overflow: hidden;
     min-height: 100%;
 }
-section{
+section{    
     box-sizing: border-box;
     margin-bottom: 10px;
 }
@@ -210,7 +210,7 @@ input[placeholder="Search"]{
 }
 
 /*Menu*/
-menu {      
+nav {      
     box-sizing: border-box;
     width: 10%;
     border: 5px solid rebeccapurple;
@@ -220,8 +220,8 @@ menu {
 }
 
 .navbar {
-    z-index: 1;
-    margin-top: 20px;
+    width: 10%;    
+    margin-top: 120px;
     list-style-type: none;
     position: fixed;
 }
@@ -264,31 +264,31 @@ menu {
     background-color: aqua;
 }
 
-menu .menumother-img {      
+nav .menumother-img {      
     background-image: url('img/Symbol/Motherboard.jpg');    
 }
 
-menu .menucpu-img {
+nav .menucpu-img {
     background-image: url('img/Symbol/CPU.jpg');
 }
 
-menu .menuram-img {
+nav .menuram-img {
     background-image: url('img/Symbol/RAM.jpg');
 }
 
-menu .menuvideo-img {
+nav .menuvideo-img {
     background-image: url('img/Symbol/Video%20adapter.jpg');
 }
 
-menu .menuhdd-img {
+nav .menuhdd-img {
     background-image: url('img/Symbol/HDD.jpg');
 }
 
-menu .menupower-img {
+nav .menupower-img {
     background-image: url('img/Symbol/Power%20source.jpg');
 }
 
-menu .menucooling-img {
+nav .menucooling-img {
     background-image: url('img/Symbol/Cooling.jpg');
 }
 .menumother-img, .menucpu-img, .menuram-img, .menuvideo-img, .menuhdd-img, .menupower-img, .menucooling-img {    
@@ -469,6 +469,11 @@ menu .menucooling-img {
 
 /*Pages Category items*/
 
+.elementsPage {
+    width: 90%;
+    float: right;
+}
+
 .itemsContent { 
     margin: auto;
     position: relative; 
@@ -484,7 +489,7 @@ menu .menucooling-img {
 
 /*Main path*/
 
-menu, .itemsContent {
+nav, .itemsContent {
 /*    display: inline-block;*/
     vertical-align: top;
 }
@@ -551,25 +556,38 @@ menu, .itemsContent {
 .inform {
     text-align: left;
     display: inline-block;
-    padding-top: 15px;
+    padding-top: 7px;
     width: 350px;
+    height: 23px;
 }
 
-.squareList .linkProperties {
+
+.squareList .motherLinkProperties {
    margin-left: 0;   
 }
 
-.listPrice {
-    margin-top: 7px;
+.motherLinkProperties {
+    display: inline-block;
+    white-space: nowrap;
+    height: 15px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 150px;
+}
+
+.listPrice {    
     display: inline-block;
     padding-right: 15px;
     float: right;
 }
 .itemsInfo {
-    display: inline-block;
+    display: block;
+    font-size: 15px;
     height: 30px;
-    margin-top: 5px;
-    overflow: hidden;
+    margin-top: 5px; 
+    white-space: nowrap;
+    overflow: hidden;   
+    text-overflow: ellipsis;
 }
 
 .addCartItem {    
