--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ header .basket-img, .authorization-img{
 
 
 }
-header:after, .tab-content:after, footer, .itemsContent:after{
+header:after, .tab-content:after, footer, .itemsContent:after, .formAdd:after, .productDescription:after, description:after {
     display: block;
     content: '';
     clear: both;
@@ -225,20 +225,17 @@ input[placeholder="Search"]{
 }
 
 /*Menu*/
-nav {      
-    box-sizing: border-box;
-    width: 10%;
-    border: 5px solid rebeccapurple;
-    border-left: none;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-}
 
 .navbar {
     width: 10%;    
     margin-top: 120px;
     list-style-type: none;
     position: fixed;
+    box-sizing: border-box;    
+    border: 5px solid rebeccapurple;
+    border-left: none;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .navbar a {
@@ -325,11 +322,7 @@ nav .menucooling-img {
     width:80%;
     margin: 0 auto;
 }
-.productDescription:after, description:after{
-    display: block;
-    clear: both;
-    content: '';
-}
+
 .productDescription .breadcrumb, .breadcrumb>li{
     display: inline-block;
     list-style-type: none;
@@ -764,24 +757,35 @@ nav, .itemsContent {
 
 /*Address page*/
 .address {
-    width: 500px;    
+    width: 80%;    
     margin: auto;
-    height: 400px;
+    height: 800px;
 }
+/*Mobile Varsion*/
+.positionAdd {
+    width: 80%;
+    margin: auto;
+}
+
 .squareAdd {
     z-index: 2;
     float: left;
     margin-top: 10%;
-    margin-right: 25px;
-    margin-bottom: -40px;
+    padding-left: 5px;
+    padding-right: 5px;
     min-height: 150px;
     text-align: center;
     position: relative;    
     display: inline-block;
-    width: 200px;
+    width: 48%;
+}
+
+.squareAdd h1 {
+    font-size: 50px;
 }
 
 .addressInfo {
+    font-size: 35px;
     text-align: left;
     margin-bottom: 7px;
 }
@@ -796,23 +800,34 @@ nav, .itemsContent {
 }
 
 .addressInfo input {
+    font-size: 25px;
     vertical-align: middle;
     float: right;
-    width: 106px;
-    height: 13px;
+    width: 50%;
+    height: 33px;
 }
 
 .addCheck {
-    font-size: 14px;
+    font-size: 25px;
 }
 .addCheck input {
+    width: 25px;
+    height: 25px;
     float: left;
 }
-.address a{
-    z-index: 20;
+.buttonAdd{
+    clear: both;
+    width: 20%;
+    height: 100px;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
 }
-.address .line5 {    
-    margin-top: 25px;
+
+.buttonAdd input {
+    height: 50px;
+    margin: auto;
+    width: 80%;     
 }
 
 /*Cart page*/
