--- a/style.css
+++ b/style.css
@@ -40,8 +40,7 @@ section{
 }
 header, footer{
     font-size: 20px;
-    background: -webkit-radial-gradient(center, circle farthest-side, #000, rgba(122,122,122,1) 80%);
-    
+    background: rgba(122,122,122,1);
     color: white;
     box-sizing: border-box;
 }
@@ -147,7 +146,7 @@ header .basket-img, .authorization-img{
 
 
 }
-header:after, .tab-content:after, footer, .itemsContent:after, .formAdd:after, .productDescription:after, description:after {
+header:after, .tab-content:after, footer, .itemsContent:after, .formAdd:after, .productDescription:after, description:after, .square:after, .squareElementsInclude:after {
     display: block;
     content: '';
     clear: both;
@@ -492,8 +491,7 @@ nav, .itemsContent {
 }
 
 .itemsContent a {    
-    text-decoration: none;
-    padding-left: 5px;
+    text-decoration: none;    
 }
 
 .itemsContent a:link {
@@ -512,15 +510,26 @@ nav, .itemsContent {
     color: red;
 }
 
-.square {  
+.square {    
     vertical-align: top;
-    width: 10%;
+    width: 30%;
     display: inline-block;
-    height: 100px;
-    text-align: center;
-    margin: 10px 15px 15px 15px;  
+    height: 200px;
+    text-align: center;            
     font-size: 12px;
     float: left;
+}
+
+.squareElementInclude {
+    width: 100%;
+    height: 180px;
+    clear: both;
+}
+
+.squareElementInclude a {
+    width: 80%;
+    display: inline-block;
+    clear: both;
 }
 
 .squareList {
@@ -534,7 +543,7 @@ nav, .itemsContent {
 }
 
 .imgItem {    
-    height: 60px;    
+    height: 150px;    
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;   
@@ -828,7 +837,8 @@ nav, .itemsContent {
 .buttonAdd input {
     height: 50px;
     margin: auto;
-    width: 80%;     
+    width: 80%; 
+    font-size: 30px;
 }
 
 /*Cart page*/
@@ -1016,7 +1026,7 @@ nav, .itemsContent {
 
 
 /*@media screen*/
-@media screen and  (max-device-width: 850px), (max-width: 1200px){
+@media screen and  (max-width: 1100px){
     .tab-content .Categories{
     width: 260px;
     height: 300px;
@@ -1031,12 +1041,13 @@ nav, .itemsContent {
         width:98%;
     }
     .Categories:hover{
-    -webkit-animation: none;
-    border:1px solid black;
-    -webkit-box-shadow: none; 
+    border: 2px solid blue;
+    font-size: 25px;
+     -webkit-box-shadow: none; 
     -moz-box-shadow: none;
      box-shadow: none; 
     }
+    
     .slider-img {
     float: left;
     width:100%;
@@ -1077,61 +1088,7 @@ margin-top:19px;
     .login input {
         padding:10px;
     }
-    .freeBlock {
-    display: none;
-}
-    .orderFormLayout {
-    position: relative;
-    width: 90%;
-    height: 500px;
-    margin: auto;
-    padding: 100px 0px;
-    }   
-    .orderForm {
-    width: 100%;
-    height: 92%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    }
-    .orderForm .line1 {
-    top: 113px;
-    left: 17px;
-    width: 632px;
-    }
-    .line1 input, .line4 input, .line2 select {
-    width: 150px;
-    height: 70px;
-    }
-    .orderForm .line2 {
-    top: 120px;
-    left: 184px;
-    }
-    .orderForm .line3 {
-    top: 160px;
-    left: 26px;
-    }
-    .orderForm .line4 {
-    top: -6px;
-    left: 692.5px;
-    }
-    .line5 {
-    top: 230px;
-    }
-    .orderForm .line3 input {
-    width: 350px;
-    height: 55px;
-    }
-    .orderForm form input,.orderForm form option, .orderForm form select{
-    font-size: 30px;
-    }
-    .lineValid {
-    font-size: 14px;
-    top: 115px;
-    left: 238px;
-    margin-right: 110px;
-    }
-    .line5 input {
-    width: 150px;
-    height: 75px;
-    }
+    
+/*Menu Mobile Versi0n*/
+    
 }
