--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@ html, body{
 }
 /*Header*/
 
-.freeBlock {
+/*.freeBlock {
     width: 100%;
     height: 70px;
-}
+}*/
 
 footer{
     margin-top: -50px;
@@ -34,7 +34,8 @@ header{
     overflow: hidden;
     min-height: 100%;
 }
-section{    
+section{ 
+    padding-top: 70px;
     box-sizing: border-box;
     margin-bottom: 10px;
 }
@@ -438,7 +439,9 @@ nav .menucooling-img {
     font-weight: bold;
     font-size: 25px;
 }
+
 /*Social*/
+
 .lineSocial{
     width:100%;
     clear: both;
@@ -1143,8 +1146,5 @@ margin-top:19px;
     .line5 input {
     width: 150px;
     height: 75px;
-    }
-    
-Menu Mobile Versi0n
-    
+    }    
 }
