--- a/style.css
+++ b/style.css
@@ -15,12 +15,9 @@ html, body{
     min-height: 100%;
 }
 
-
-
 /*Header*/
 
 .wrapper__header{
-
     width: 100%;
     z-index: 10;
     height: 70px;
@@ -76,13 +73,7 @@ html, body{
     background-repeat: no-repeat;
     padding-left:5px;
 }
-.wrapper__product-section, .content-layout{
-    padding-top:70px;    
-    box-sizing: border-box;
-    margin-bottom: 10px;
-    width: 90%;
-    margin: 2% auto;
-}
+
 .footer{
     margin-top: -50px;
     height: 50px;
@@ -90,6 +81,13 @@ html, body{
     text-align: center;    
 }
 /*Content*/
+.product-section{
+    padding-top:70px;    
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    width: 90%;
+    margin: 2% auto;
+}
 .tab-content .imgCooling{
     background-image: url('img/Cooling/DEEPCOOL/DEEPCOOL%20Beta%2010.jpg');
 }
@@ -118,12 +116,11 @@ html, body{
 .tab-content .imgvideoAdapter{
     background-image: url('img/CPU/Intel/Intel%20Pentium%20G2020%20OEM.jpg');
 }
-.tab-content{
+.product-section__tab-content{
     width: 98%;
-    text-align: center;
     margin: auto;
 }
-.tab-content .layoutCategories, .Categories{
+.tab-content__layoutCategories, .Categories{
     box-sizing: border-box;
     display: inline-block;
     vertical-align: top;
@@ -141,6 +138,9 @@ html, body{
     display: block;
     content: '';
     clear: both;
+}
+.tab-content{
+        text-align: center;
 }
 .Categories:hover{
     -webkit-animation: movie 2s infinite;
