--- a/result/style.css
+++ b/result/style.css
@@ -188,6 +188,9 @@ html, body {
   border-radius: 4px;
   border: 2px solid darkblue; }
 
+input[placeholder="Search"] {
+  margin-top: 10px; }
+
 .login .view {
   margin-top: 42px; }
 
@@ -992,34 +995,3 @@ nav, .itemsContent {
 .modal-dialog:target {
   display: block;
   pointer-events: auto; }
-
-@media screen and (max-width: 720px) {
-  .header__elements--logo {
-    width: 53px;
-    height: 40px; }
-
-  .header__elements {
-    margin: 17px 5px 5px 5px; }
-
-  .header__elements--search {
-    margin-top: 22px;
-    width: 100px; }
-
-  .header-elements__authorization--img, .header-elements__basket--img {
-    padding-left: 0px; }
-
-  .header__elements--basket, .header-elements__authorization {
-    padding: 5px; }
-
-  .header-elements__text--hidden {
-    display: none; }
-
-  .breadcrumb {
-    margin-left: 20%; }
-
-  .product-description__slider-img {
-    margin: 10px auto;
-    float: none;
-    width: 40%;
-    height: 40%;
-    min-width: 250px; } }
