--- a/src/style.css
+++ b/src/style.css
@@ -1000,25 +1000,30 @@ nav, .itemsContent {
   pointer-events: auto; }
 
 @media screen and (max-width: 720px) {
-  .header__elements--logo {
-    width: 53px;
-    height: 40px; }
-  .header__elements {
-    margin: 17px 5px 5px 5px; }
-  .header__elements--search {
-    margin-top: 22px;
-    width: 100px; }
-  .header-elements__authorization--img, .header-elements__basket--img {
-    padding-left: 0px; }
-  .header__elements--basket, .header-elements__authorization {
-    padding: 5px; }
-  .header-elements__text--hidden {
-    display: none; }
-  .breadcrumb {
-    margin-left: 20%; }
-  .product-description__slider-img {
-    margin: 10px auto;
-    float: none;
-    width: 40%;
-    height: 40%;
-    min-width: 250px; } }
+    .header__elements--logo {
+        width: 53px;
+        height: 40px; }
+    .header__elements {
+        margin: 17px 5px 5px 5px; }
+    .header__elements--search {
+        margin-top: 22px;
+        width: 100px; }
+    .header-elements__authorization--img, .header-elements__basket--img {
+        padding-left: 0px; }
+    .header__elements--basket, .header-elements__authorization {
+        padding: 5px; }
+    .header-elements__text--hidden {
+        display: none; }
+    .breadcrumb {
+        margin-left: 20%; }
+    .product-description__slider-img {
+        margin: 10px auto;
+        float: none;
+        width: 40%;
+        height: 40%;
+        min-width: 250px; } 
+    .product-description__layout-description{
+        width:100%;
+    }
+
+}
