--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -695,7 +695,7 @@ nav, .itemsContent {
   background-image: url("../img/Power source/Thermaltake/Thermaltake TR2 600W [TR-600P].jpg"); }
 
 .powerImg4 {
-  background-image: url("img/Power source/Zalman/Zalman GVM 850W [ZM850-GVM].jpg"); }
+  background-image: url("../img/Power source/Zalman/Zalman GVM 850W [ZM850-GVM].jpg"); }
 
 .ramImg1 {
   background-image: url("../img/RAM/AMD%20Radeon/AMD%20Radeon%20Entertainment%20Series%20%5BR538G1601U2S-UOUGO%5D%208%20%D0%93%D0%B1.jpg"); }
